--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
     <dependency>
       <groupId>org.everit.osgi</groupId>
       <artifactId>org.everit.osgi.liquibase.bundle</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha2</version>
     </dependency>
     <dependency>
       <groupId>org.ow2.util.bundles</groupId>
