--- a/pom.xml
+++ b/pom.xml
@@ -140,46 +140,48 @@
         </executions>
       </plugin>
 
-<!--       <plugin> -->
-<!--         <groupId>org.jacoco</groupId> -->
-<!--         <artifactId>jacoco-maven-plugin</artifactId> -->
-<!--         <version>0.6.4.201312101107</version> -->
-<!--         <executions> -->
-<!--           <execution> -->
-<!--             <id>prepare-agent</id> -->
-<!--             <goals> -->
-<!--               <goal>prepare-agent</goal> -->
-<!--             </goals> -->
-<!--           </execution> -->
-<!--           <execution> -->
-<!--             <id>report</id> -->
-<!--             <phase>prepare-package</phase> -->
-<!--             <goals> -->
-<!--               <goal>report</goal> -->
-<!--             </goals> -->
-<!--           </execution> -->
-<!--           <execution> -->
-<!--             <id>check</id> -->
-<!--             <goals> -->
-<!--               <goal>check</goal> -->
-<!--             </goals> -->
-<!--             <configuration> -->
-<!--               <rules> -->
-<!--                 <rule> -->
-<!--                   <element>BUNDLE</element> -->
-<!--                   <limits> -->
-<!--                     <limit> -->
-<!--                       <counter>COMPLEXITY</counter> -->
-<!--                       <value>COVEREDRATIO</value> -->
-<!--                       <minimum>0.28</minimum> -->
-<!--                     </limit> -->
-<!--                   </limits> -->
-<!--                 </rule> -->
-<!--               </rules> -->
-<!--             </configuration> -->
-<!--           </execution> -->
-<!--         </executions> -->
-<!--       </plugin> -->
+      <!--
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.6.4.201312101107</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution> 
+          <execution>
+            <id>check</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration> 
+              <rules> 
+                <rule>
+                  <element>BUNDLE</element>
+                  <limits>
+                    <limit> 
+                      <counter>COMPLEXITY</counter>
+                      <value>COVEREDRATIO</value>
+                      <minimum>0.28</minimum>
+                    </limit> 
+                  </limits>
+                </rule>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin> 
+      -->
     </plugins>
     <pluginManagement>
       <plugins>
