--- a/pom.xml
+++ b/pom.xml
@@ -278,6 +278,11 @@
       <version>3.9.1-v20130814-1242</version>
     </dependency>
     <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
