--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.6.4.201312101107</version>
+        <version>0.7.0.201403182114</version>
         <executions>
           <execution>
             <id>prepare-agent</id>
@@ -275,6 +275,11 @@
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
