--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,7 @@
     <dependency>
       <groupId>org.everit.osgi</groupId>
       <artifactId>org.everit.osgi.liquibase.bundle</artifactId>
-      <version>3.1.1-SNAPSHOT</version>
+      <version>3.1.1-v20140324</version>
     </dependency>
     <dependency>
       <groupId>org.ow2.util.bundles</groupId>
