--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.everit.osgi.dev</groupId>
   <artifactId>org.everit.osgi.dev.lqmg</artifactId>
-  <version>2.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Everit - Liquibase-QueryDSL Model Generator</name>
   <description>
@@ -269,8 +269,13 @@
     <dependency>
       <groupId>org.eclipse</groupId>
       <artifactId>osgi</artifactId>
-      <version>3.9.1-v20130814-1242</version>
+      <version>3.9.1-v20140110-1610</version>
     </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.apache.felix</groupId> -->
+<!--       <artifactId>org.apache.felix.framework</artifactId> -->
+<!--       <version>4.4.0</version> -->
+<!--     </dependency> -->
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
