--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>5.0.0</version>
+    <version>5.0.1</version>
   </parent>
 
   <groupId>org.everit.osgi.dev</groupId>
@@ -52,10 +52,6 @@
 
   <url>http://everit.org</url>
 
-  <ciManagement>
-    <system>Jenkins</system>
-    <url>https://ci.everit.biz/jenkins/job/${projectpath}</url>
-  </ciManagement>
   <issueManagement>
     <system>GitHub</system>
     <url>https://github.com/everit-org/${projectpath}/issues</url>
@@ -291,6 +287,16 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.6</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.2.11</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.2.10-b140310.1920</version>
     </dependency>
   </dependencies>
 </project>
