--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    This file is part of Everit - Liquibase-QueryDSL Model Generator.
+    Copyright (C) 2011 Everit Kft. (http://www.everit.biz)
 
-    Everit - Liquibase-QueryDSL Model Generator is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-    Everit - Liquibase-QueryDSL Model Generator is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
+            http://www.apache.org/licenses/LICENSE-2.0
 
-    You should have received a copy of the GNU Lesser General Public License
-    along with Everit - Liquibase-QueryDSL Model Generator.  If not, see <http://www.gnu.org/licenses/>.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -25,13 +24,15 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>5.0.1</version>
+    <version>7.0.1</version>
   </parent>
 
   <groupId>org.everit.osgi.dev</groupId>
   <artifactId>org.everit.osgi.dev.lqmg</artifactId>
-  <version>3.0.1</version>
+  <version>4.0.0-SNAPSHOT</version>
+
   <packaging>jar</packaging>
+
   <name>Everit - Liquibase-QueryDSL Model Generator</name>
   <description>
     A generator that supports creating QueryDSL metamodel from Liquibase changelog files via an embedded H2
@@ -59,8 +60,8 @@
 
   <licenses>
     <license>
-      <name>GNU Lesser General Public License v3.0</name>
-      <url>http://opensource.org/licenses/LGPL-3.0</url>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -184,6 +185,22 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <!-- TODO remove LQMG check exlusions -->
+          <excludes>org/everit/osgi/dev/lqmg/internal/schema/xml/*,org/everit/osgi/dev/lqmg/internal/LQMG*</excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <!-- TODO remove LQMG check exlusions -->
+          <excludeFilterFile>lqmg-findbugs-exclude-filter.xml</excludeFilterFile>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
