replace org.everit.osgi.liquibase.bundle dependency to org.everit.persistence.liquibase.ext.osgi. Update code.

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.persistence</groupId>
   <artifactId>org.everit.persistence.lqmg</artifactId>
-  <version>1.0.0</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <packaging>jar</packaging>
 
@@ -264,9 +264,9 @@
       <version>1.4.178</version>
     </dependency>
     <dependency>
-      <groupId>org.everit.osgi</groupId>
-      <artifactId>org.everit.osgi.liquibase.bundle</artifactId>
-      <version>3.1.1-v20140507</version>
+      <groupId>org.everit.persistence</groupId>
+      <artifactId>org.everit.persistence.liquibase.ext.osgi</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.ow2.util.bundles</groupId>
